--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Discord bot to define acronyms and abbreviations",
   "scripts": {
-    "start": "ts-node index.ts"
+    "build": "tsc -p tsconfig.json",
+    "dev": "tsc-watch --onSuccess 'node ./dist/index.js'",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
-    "ts-node": "^9.1.1",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.2.3"
   }
 }
