--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acrobot",
   "version": "1.0.0",
-  "description": "Discord bot to define acronyms and abbreviations",
+  "description": "Discord bot to define acronyms, abbreviations, and idiomatic vernacular",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc-watch --onSuccess 'node ./dist/index.js'",
@@ -15,9 +15,11 @@
   "homepage": "https://github.com/atx-crypto-collective/acrobot#readme",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.6.5"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.37",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.3"
